compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__ascii_as_unicode_escape_sequence.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 106
expression: "\npub fn y() -> String {\n  \"\\u{79}\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn y() -> String {
  "\u{79}"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([y/0]).

-file("project/test/my/mod.gleam", 2).
-spec y() -> binary().
y() ->
    <<"\x{79}"/utf8>>.
