compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__assert_const_concat_other_const_concat.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 484
expression: "\nconst cute_bee = \"cute\" <> \"bee\"\nconst cute_cute_bee_buzz = cute_bee <> \"buzz\"\n\npub fn main() {\n  cute_cute_bee_buzz\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

const cute_bee = "cute" <> "bee"
const cute_cute_bee_buzz = cute_bee <> "buzz"

pub fn main() {
  cute_cute_bee_buzz
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 5).
-spec main() -> binary().
main() ->
    <<"cute"/utf8, "bee"/utf8, "buzz"/utf8>>.
