compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__assert_string_prefix_discar.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 433
expression: "\npub fn main(x) {\n  let assert \"m-\" <> _ = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  let assert "m-" <> _ = x
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).

-file("project/test/my/mod.gleam", 2).
-spec main(binary()) -> binary().
main(X) ->
    case X of
        <<"m-"/utf8, _/binary>> -> X;
        _assert_fail ->
            erlang:error(#{gleam_error => let_assert,
                        message => <<"Pattern match failed, no pattern matched the value."/utf8>>,
                        file => <<?FILEPATH/utf8>>,
                        module => <<"my/mod"/utf8>>,
                        function => <<"main"/utf8>>,
                        line => 3,
                        value => _assert_fail,
                        start => 20,
                        'end' => 44,
                        pattern_start => 31,
                        pattern_end => 40})
    end.
