compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__concat.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 117
expression: "\npub fn go(x, y) {\n  x <> y\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x, y) {
  x <> y
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/2]).

-file("project/test/my/mod.gleam", 2).
-spec go(binary(), binary()) -> binary().
go(X, Y) ->
    <<X/binary, Y/binary>>.
