compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__concat_3_variables.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 128
expression: "\npub fn go(x, y, z) {\n  x <> y <> z\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x, y, z) {
  x <> y <> z
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/3]).

-file("project/test/my/mod.gleam", 2).
-spec go(binary(), binary(), binary()) -> binary().
go(X, Y, Z) ->
    <<<<X/binary, Y/binary>>/binary, Z/binary>>.
