compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__concat_constant.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 375
expression: "\nconst a = \"Hello, \"\nconst b = \"Joe!\"\n\npub fn go() {\n  a <> b\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

const a = "Hello, "
const b = "Joe!"

pub fn go() {
  a <> b
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/0]).

-file("project/test/my/mod.gleam", 5).
-spec go() -> binary().
go() ->
    <<"Hello, "/utf8, "Joe!"/utf8>>.
