compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__concat_constant_fn.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 389
expression: "\nconst cs = s\n\nfn s() {\n  \"s\"\n}\n\npub fn go() {\n  cs() <> cs()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

const cs = s

fn s() {
  "s"
}

pub fn go() {
  cs() <> cs()
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/0]).

-file("project/test/my/mod.gleam", 4).
-spec s() -> binary().
s() ->
    <<"s"/utf8>>.

-file("project/test/my/mod.gleam", 8).
-spec go() -> binary().
go() ->
    <<(s())/binary, (s())/binary>>.
